<resources>
    <string name="app_name">Notes Manager</string>
    <string name="search_hint">Поиск по заметкам</string>
    <string name="name_hint">Название</string>
    <string name="time_hint">10:00 – 12:00</string>
    <string name="description_hint">Описание</string>
    <string name="example">Ио́сиф Виссарио́нович Ста́лин (настоящая фамилия Джугашви́ли (груз. იოსებ ჯუღაშვილი); 6 [18] декабря 1878 (по официальной версии — 9 [21] декабря 1879), Гори, Тифлисская губерния, Российская империя — 5 марта 1953, Ближняя дача, Волынское, Кунцевский район, Московская область, РСФСР, СССР) — советский политический, государственный, военный и партийный деятель, российский революционер. Фактический руководитель СССР[1][2]. Генеральный секретарь ЦК РКП(б) — ВКП(б) (1922—1934), секретарь ЦК ВКП(б) — КПСС (1934—1953), Маршал Советского Союза (1943)[3], Генералиссимус Советского Союза (1945)[4]. Народный комиссар обороны СССР (1941—1946), председатель Совнаркома СССР и Совета Министров СССР (1941—1953), председатель Государственного комитета обороны СССР (1941—1945).Занимал также должности: с 3 апреля 1922 по 10 февраля 1934 года — генерального секретаря, затем — секретаря ЦК ВКП(б) (с 1952 года — КПСС), с 19 декабря 1930 года, после занятия должности Вячеславом Молотовым председателя Совета народных комиссаров СССР вместо Алексея Рыкова.В 1912 году по предложению В. И. Ленина был включён в ЦК РСДРП. Тогда же Иосиф Джугашвили окончательно избрал себе псевдоним «Сталин». Во время Октябрьской революции, Вторым Всероссийским съездом был избран членом ВЦИК и СНК. В 1922 году на Пленуме ЦК РКП(б) был избран членом Оргбюро и Политбюро ЦК РКП(б), а также Генеральным секретарём ЦК РКП(б) (при нахождении Ленина на должности Председателя СНК СССР). В 1930 году, после ослабления и смерти Ленина, Сталин окончательно вышел победителем из внутрипартийной борьбы, став руководителем государства.Сталин являлся фактическим основателем тоталитарной диктатуры в СССР[5][6][7][8][9]. В 1928—1929 годах был инициатором перехода с курса новой экономической политики (НЭПа) на курс индустриализации, коллективизации и построения плановой экономики[10], активизировал политику культурной революции в СССР[11]. С именем Сталина также связывают голод 1932—1933[⇨] и 1946—1947 годов, депортацию народов, религиозное преследование, раскулачивание и массовые политические репрессии. С 1937 по 1938 год Сталин сыграл ключевую роль в «Большом терроре». Лично участвовал в переговорах с министром иностранных дел нацистской Германии Риббентропом перед подписанием договора о ненападении и в переговорах с представителями Финляндии перед Советско-финляндской войной в 1939 году. Во время Великой Отечественной войны осуществлял непосредственное стратегическое руководство советскими вооружёнными силами. </string>
    <string name="start_time">00:00</string>
    <string name="end_time">01:00</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
</resources>